--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -21,17 +21,14 @@
 }
 
 html {
-  height: 100%;
+  min-height: 850px;
   width: 100%;
   font-size: 62.5%;
 }
 
 body {
-  display: flex;
-  flex-direction: column;
+  text-align: center;
   align-items: center;
-  justify-content: center;
-
   width: 100%;
   height: 100%;
 
@@ -39,13 +36,13 @@ body {
   font-size: 1.6rem;
 
   background-color: #222;
-  overflow: clip;
+  overflow-x: hidden;
 }
 
 @media (max-width: 640px) {
   html {
     font-size: 50%;
-    overflow: hidden;
+    min-height: 667px;
   }
 
   .title {
@@ -54,8 +51,8 @@ body {
 
   .title::before {
     height: 4rem !important;
-    width: 15rem !important;
-    top: 0.5rem !important;
+    width: 12rem !important;
+    transform: translateX(20%);
   }
 
   .hightlight {
@@ -65,6 +62,9 @@ body {
   .main-field {
     height: 40rem !important;
     width: 40rem !important;
+
+    top: calc(300px - 20rem) !important;
+    left: calc(50vw - 20rem) !important;
   }
 
   .main-field::before {
@@ -77,7 +77,8 @@ body {
   }
 
   .control-buttons-container {
-    top: 80vh !important;
+    top: 520px !important;
+    transform: translateX(-5%);
   }
 
   .control-buttons-container::before {
@@ -88,13 +89,13 @@ body {
   }
 
   .button--open-popup {
-    top: 90vh !important;
+    top: 600px !important;
     left: calc(50vw - 55px) !important;
   }
 
   .options-popup {
-    top: 73vh !important;
-    left: 6.4rem !important;
+    top: 485px !important;
+    left: calc(50vw - 19rem) !important;
     z-index: 1 !important;
   }
 }
@@ -102,7 +103,7 @@ body {
 /* Title */
 
 .title {
-  position: absolute;
+  position: relative;
   top: 2rem;
 
   font-size: 4rem;
@@ -118,8 +119,8 @@ body {
   height: 5rem;
   width: 18rem;
   background-color: #03622b;
-  transform: rotate(4deg);
-  top: 0.2rem;
+  top: 1rem;
+  left: calc(50vw - 16rem);
   border-radius: 5px;
 
   z-index: -1000;
@@ -155,7 +156,9 @@ body {
 }
 
 .main-field {
-  /* position: relative; */
+  position: absolute;
+  top: calc(425px - 30rem);
+  left: calc(50vw - 30rem);
 
   display: grid;
   grid-template-columns: repeat(5, 1fr);
@@ -187,7 +190,9 @@ body {
   position: absolute;
   display: flex;
   gap: 1rem;
-  top: 90vh;
+  top: 800px;
+  left: calc(50vw - 9.5rem);
+  align-self: center !important;
 }
 
 .control-buttons-container::before {
@@ -209,6 +214,7 @@ body {
 }
 
 .button {
+  display: block;
   color: #aaa;
   font-weight: 800;
 
@@ -264,6 +270,8 @@ body {
   padding: 2rem 4rem;
   border-radius: 1rem;
   border: 2px solid #aaa;
+
+  z-index: 1;
 }
 
 .button--close-popup {
